Had card thumb nail support.  Currently ImageDialog does not work when built as release.

--- a/ardb/ardb.vcproj
+++ b/ardb/ardb.vcproj
@@ -492,6 +492,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\wxARDB\src\imagedialog.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\wxARDB\src\imagedialog.h"
+					>
+				</File>
+				<File
 					RelativePath="..\wxARDB\src\imagePanel.cpp"
 					>
 				</File>
