remove "VTES Sets..." command and factor out SQL code to a c lib.
close issue http://code.google.com/p/ardb/issues/detail?id=31

@graham i added importxml files to unix build. When you add new files just modify /src/Makefile.am
@graham please review my changes

--- a/trunk/wxARDB/src/Makefile.am
+++ b/trunk/wxARDB/src/Makefile.am
@@ -41,7 +41,9 @@ ardb_SOURCES = \
 	speling.cpp \
 	types.cpp \
 	updater.cpp \
-	imagePanel.cpp
+	imagePanel.cpp \
+	ardb_db_edition_filter.cpp \
+	importxml.cpp
 
 ardb_resource.o: ardb.rc
 	$(RESCOMP) -i$(srcdir)/ardb.rc -o ardb_resource.o \
