--- a/trunk/wxARDB/resources/ardb.ini
+++ b/trunk/wxARDB/resources/ardb.ini
@@ -18,17 +18,25 @@ VampireSpecial13="Black Hand|%Black Hand%"
 VampireSpecial14="Seraph|%Seraph%"
 VampireSpecial15="Red List|%Red List%"
 VampireSpecial16="Enter combat|%enter combat%"
+LibraryReq1="Black Hand|%Black Hand%"
+LibraryReq2="Seraph|%Seraph%"
+LibraryReq3="Anarch|%Anarch%"
+LibraryReq4="Baron|%Baron%"
+LibraryReq5="Flight|%Flight%"
+LibraryText1="Trifle|%Trifle.%"
+LibraryText2="Trophy|%Trophy.%"
 HighestGroup=5
-DisplaySplashScreen=1
-BrowserWindowHeight=601
-BrowserWindowWidth=800
-SplitterPositionL=227
+DisplaySplashScreen=0
+SplitterPositionL=284
 DisplayInventory=0
 PrimeDisciplinesMaxCards=100
-SplitterPositionC=227
+SplitterPositionC=284
 DeckWindowHeight=600
 DeckWindowWidth=800
 FilterCardsLikeMaxCount=40
-DeckTextTemplate=C:\\deck2text.xsl
 UpdateServer=www.white-wolf.com
 UpdateFile=/VTES/downloads/vtescsv.zip
+BrowserWindowHeight=717
+BrowserWindowWidth=1135
+BrowserWindowX=115
+BrowserWindowY=21
