--- a/wxARDB/configure.in
+++ b/wxARDB/configure.in
@@ -181,7 +181,7 @@ AM_CONDITIONAL(USE_MACOS,   test $use_mac     = yes)
 
 AC_SUBST(SQLITE_CFLAGS)
 AC_SUBST(SQLITE_LIBS)
-CXXFLAGS="$CXXFLAGS $WX_CXXFLAGS $XML2_FLAGS $XSLT_FLAGS \"-DARDB_PREFIX=\\\"$prefix\\\"\" "
+CXXFLAGS="$CXXFLAGS $WX_CXXFLAGS $XML2_FLAGS $XSLT_FLAGS \"-DARDB_PREFIX=\\\"$prefix\\\"\" -DLINUXBUILD "
 
 AC_SUBST(LDFLAGS)
 AC_SUBST(CXXFLAGS)
