Now uses new link for downloading card texts

--- a/trunk/wxARDB/resources/ardb.ini
+++ b/trunk/wxARDB/resources/ardb.ini
@@ -27,16 +27,16 @@ LibraryText1="Trifle|%Trifle.%"
 LibraryText2="Trophy|%Trophy.%"
 HighestGroup=5
 DisplaySplashScreen=0
-SplitterPositionL=284
+SplitterPositionL=202
 DisplayInventory=0
 PrimeDisciplinesMaxCards=100
-SplitterPositionC=284
+SplitterPositionC=232
 DeckWindowHeight=600
 DeckWindowWidth=800
 FilterCardsLikeMaxCount=40
-UpdateServer=www.white-wolf.com
-UpdateFile=/VTES/downloads/vtescsv.zip
-BrowserWindowHeight=717
-BrowserWindowWidth=1135
-BrowserWindowX=115
-BrowserWindowY=21
+UpdateServer=download.white-wolf.com
+UpdateFile=/download/download.php?file_id=131
+BrowserWindowHeight=622
+BrowserWindowWidth=932
+BrowserWindowX=134
+BrowserWindowY=85
